--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -1,35 +1,10 @@
 body {
 	width: 400px;
 	height: 384px; /* minus arrow on top */
-	padding: 0px;
-	margin: 0px;
-	text-align: center;
-	background-repeat:no-repeat;
-	font-family:'Noto Sans','Segoe UI','Lucida Grande','Open Sans',arial,sans-serif;
+	padding-top: 60px;
 }
 
-#login_container {
-	margin-top: -16px; /* minus arrow on top */
-	width: 100%;
-	height: 100%;
-	background-image:url('../images/background.jpg');
-	color: #FFFFFF;
-}
-
-#login_container h1 {
-	padding-top: 20px;
-}
-
-#login_button {
-	padding-top: 200px;
-}
-
-#share_container {
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
-#share_container h2#share_url {
+#share_url {
 	text-align: center;
 	text-overflow: ellipsis;
 	-webkit-line-clamp: 1;
@@ -38,49 +13,6 @@ body {
 	overflow: hidden;
 }
 
-#share_container input#share_title, textarea, select {
-	width: 100%;
-	background: transparent;
-	border: 1px solid #CCC;
-}
-
-#share_container input#share_title {
-	height: 35px;
-}
-
-#share_container textarea {
-	height: 70px;
-}
-
-#share_container select {
-	height: 35px;
-}
-
-#share_container #submit_link {
-	background-color: rgb(107, 143, 61);
-	width: 200px;
-	height: 35px;
-}
-
-button {
-  border: none;
-  -webkit-border-radius: 5;
-  -moz-border-radius: 5;
-  border-radius: 5px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  background: #3498db;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
-}
-
-button:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
+#submit {
+  float: right;
 }
